Moving JDK baseline back to 1.8